[project]
name = "truesight"
version = "0.1.0"
description = "Library for building applications related to Dota2"
readme = "README.md"
authors = [
    { name = "Lesly Kinzel", email = "127464833+leslykinzel@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sgqlc>=17.1",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
